{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 215,
  "lineage": "8f48d646-355c-b4f7-f5e6-ea3be721c12e",
  "resources": [
    {
      "module": "module.seoul_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:501257812675:security-group/sg-09918733fecbdc5a0",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-09918733fecbdc5a0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07fea0d53f820c394"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "myapp-seoul-cluster-2025062406014766750000000a",
            "name_prefix": "myapp-seoul-cluster-",
            "owner_id": "501257812675",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-seoul-cluster"
            },
            "tags_all": {
              "Name": "myapp-seoul-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0404baeb88a4dabe7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.seoul_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:501257812675:security-group/sg-07fea0d53f820c394",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07fea0d53f820c394",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09918733fecbdc5a0"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09918733fecbdc5a0"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09918733fecbdc5a0"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09918733fecbdc5a0"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09918733fecbdc5a0"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09918733fecbdc5a0"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "myapp-seoul-node-2025062406014940970000000b",
            "name_prefix": "myapp-seoul-node-",
            "owner_id": "501257812675",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-seoul-node",
              "kubernetes.io/cluster/myapp-seoul": "owned"
            },
            "tags_all": {
              "Name": "myapp-seoul-node",
              "kubernetes.io/cluster/myapp-seoul": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0404baeb88a4dabe7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.seoul_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-643218171",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09918733fecbdc5a0",
            "security_group_rule_id": "sgr-0fcd001328b3be69f",
            "self": false,
            "source_security_group_id": "sg-07fea0d53f820c394",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul_eks.module.eks.aws_security_group.cluster",
            "module.seoul_eks.module.eks.aws_security_group.node",
            "module.seoul_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2819313931",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07fea0d53f820c394",
            "security_group_rule_id": "sgr-06d9168399c0843e5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul_eks.module.eks.aws_security_group.cluster",
            "module.seoul_eks.module.eks.aws_security_group.node",
            "module.seoul_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1669055173",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07fea0d53f820c394",
            "security_group_rule_id": "sgr-0182a8c0b259c3927",
            "self": false,
            "source_security_group_id": "sg-09918733fecbdc5a0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul_eks.module.eks.aws_security_group.cluster",
            "module.seoul_eks.module.eks.aws_security_group.node",
            "module.seoul_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-461074301",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07fea0d53f820c394",
            "security_group_rule_id": "sgr-0e19ce4e9700c882d",
            "self": false,
            "source_security_group_id": "sg-09918733fecbdc5a0",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul_eks.module.eks.aws_security_group.cluster",
            "module.seoul_eks.module.eks.aws_security_group.node",
            "module.seoul_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3526953195",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07fea0d53f820c394",
            "security_group_rule_id": "sgr-067a051d6004bc184",
            "self": false,
            "source_security_group_id": "sg-09918733fecbdc5a0",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul_eks.module.eks.aws_security_group.cluster",
            "module.seoul_eks.module.eks.aws_security_group.node",
            "module.seoul_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3244635338",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07fea0d53f820c394",
            "security_group_rule_id": "sgr-0ddfc3f4a3da9f6c5",
            "self": false,
            "source_security_group_id": "sg-09918733fecbdc5a0",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul_eks.module.eks.aws_security_group.cluster",
            "module.seoul_eks.module.eks.aws_security_group.node",
            "module.seoul_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2781087489",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07fea0d53f820c394",
            "security_group_rule_id": "sgr-0f208df927a79f648",
            "self": false,
            "source_security_group_id": "sg-09918733fecbdc5a0",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul_eks.module.eks.aws_security_group.cluster",
            "module.seoul_eks.module.eks.aws_security_group.node",
            "module.seoul_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-610679574",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07fea0d53f820c394",
            "security_group_rule_id": "sgr-010504d1747e234b7",
            "self": false,
            "source_security_group_id": "sg-09918733fecbdc5a0",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul_eks.module.eks.aws_security_group.cluster",
            "module.seoul_eks.module.eks.aws_security_group.node",
            "module.seoul_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-719257473",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07fea0d53f820c394",
            "security_group_rule_id": "sgr-02637642209d31d8e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul_eks.module.eks.aws_security_group.cluster",
            "module.seoul_eks.module.eks.aws_security_group.node",
            "module.seoul_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1784531189",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07fea0d53f820c394",
            "security_group_rule_id": "sgr-06352699bac570998",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul_eks.module.eks.aws_security_group.cluster",
            "module.seoul_eks.module.eks.aws_security_group.node",
            "module.seoul_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3456264986",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-07fea0d53f820c394",
            "security_group_rule_id": "sgr-0373a6dd0d315f1a3",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul_eks.module.eks.aws_security_group.cluster",
            "module.seoul_eks.module.eks.aws_security_group.node",
            "module.seoul_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul_rds_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:501257812675:security-group/sg-09ed5a3edc0945437",
            "description": "seoul-rds-security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ed5a3edc0945437",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "seoul-db-sg",
            "name_prefix": "",
            "owner_id": "501257812675",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "seoul-rds-sg"
            },
            "tags_all": {
              "Name": "seoul-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0404baeb88a4dabe7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:501257812675:internet-gateway/igw-03cb28090e599a3fa",
            "id": "igw-03cb28090e599a3fa",
            "owner_id": "501257812675",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-0404baeb88a4dabe7"
          },
          "dependencies": [
            "module.seoul_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:501257812675:route-table/rtb-0242058ab0bb06bb1",
            "id": "rtb-0242058ab0bb06bb1",
            "owner_id": "501257812675",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03cb28090e599a3fa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0404baeb88a4dabe7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.seoul_vpc.aws_internet_gateway.gw",
            "module.seoul_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009056a4e9a5a20bf",
            "route_table_id": "rtb-0242058ab0bb06bb1",
            "subnet_id": "subnet-01b44f166a1923633"
          },
          "dependencies": [
            "module.seoul_vpc.aws_internet_gateway.gw",
            "module.seoul_vpc.aws_route_table.public",
            "module.seoul_vpc.aws_subnet.public",
            "module.seoul_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0888e58b0258216a7",
            "route_table_id": "rtb-0242058ab0bb06bb1",
            "subnet_id": "subnet-006d910dae99c45d7"
          },
          "dependencies": [
            "module.seoul_vpc.aws_internet_gateway.gw",
            "module.seoul_vpc.aws_route_table.public",
            "module.seoul_vpc.aws_subnet.public",
            "module.seoul_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:501257812675:subnet/subnet-0af0981e04dfda793",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af0981e04dfda793",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501257812675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0404baeb88a4dabe7"
          },
          "dependencies": [
            "module.seoul_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:501257812675:subnet/subnet-083109b96a4cee588",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.1.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083109b96a4cee588",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501257812675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-0404baeb88a4dabe7"
          },
          "dependencies": [
            "module.seoul_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:501257812675:subnet/subnet-01b44f166a1923633",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b44f166a1923633",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "501257812675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0404baeb88a4dabe7"
          },
          "dependencies": [
            "module.seoul_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:501257812675:subnet/subnet-006d910dae99c45d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006d910dae99c45d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "501257812675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0404baeb88a4dabe7"
          },
          "dependencies": [
            "module.seoul_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.seoul_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:501257812675:vpc/vpc-0404baeb88a4dabe7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-01e63e1b4a0e00cb3",
            "default_route_table_id": "rtb-080aaf6ba50aa1d79",
            "default_security_group_id": "sg-00fedfe6b6a9688d0",
            "dhcp_options_id": "dopt-05860d8428b83c9d1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0404baeb88a4dabe7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-080aaf6ba50aa1d79",
            "owner_id": "501257812675",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tokyo_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:501257812675:security-group/sg-030090674f208edcf",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-030090674f208edcf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-072b8e8e2545d6b82"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "myapp-tokyo-cluster-2025062406014182220000000a",
            "name_prefix": "myapp-tokyo-cluster-",
            "owner_id": "501257812675",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-tokyo-cluster"
            },
            "tags_all": {
              "Name": "myapp-tokyo-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-098db7373f97fedd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tokyo_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:501257812675:security-group/sg-072b8e8e2545d6b82",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-072b8e8e2545d6b82",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030090674f208edcf"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030090674f208edcf"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030090674f208edcf"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030090674f208edcf"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030090674f208edcf"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-030090674f208edcf"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "myapp-tokyo-node-2025062406014276110000000b",
            "name_prefix": "myapp-tokyo-node-",
            "owner_id": "501257812675",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myapp-tokyo-node",
              "kubernetes.io/cluster/myapp-tokyo": "owned"
            },
            "tags_all": {
              "Name": "myapp-tokyo-node",
              "kubernetes.io/cluster/myapp-tokyo": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-098db7373f97fedd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo_vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.tokyo_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3554137138",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-030090674f208edcf",
            "security_group_rule_id": "sgr-09b647d3916156c9d",
            "self": false,
            "source_security_group_id": "sg-072b8e8e2545d6b82",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo_eks.module.eks.aws_security_group.cluster",
            "module.tokyo_eks.module.eks.aws_security_group.node",
            "module.tokyo_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo_eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2944287735",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-072b8e8e2545d6b82",
            "security_group_rule_id": "sgr-0f58de437a1332550",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo_eks.module.eks.aws_security_group.cluster",
            "module.tokyo_eks.module.eks.aws_security_group.node",
            "module.tokyo_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1894290801",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072b8e8e2545d6b82",
            "security_group_rule_id": "sgr-033f86136ca357cf7",
            "self": false,
            "source_security_group_id": "sg-030090674f208edcf",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo_eks.module.eks.aws_security_group.cluster",
            "module.tokyo_eks.module.eks.aws_security_group.node",
            "module.tokyo_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1021892543",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072b8e8e2545d6b82",
            "security_group_rule_id": "sgr-0f159716107194943",
            "self": false,
            "source_security_group_id": "sg-030090674f208edcf",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo_eks.module.eks.aws_security_group.cluster",
            "module.tokyo_eks.module.eks.aws_security_group.node",
            "module.tokyo_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-4121604137",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072b8e8e2545d6b82",
            "security_group_rule_id": "sgr-0e85dd3a32a3c78bd",
            "self": false,
            "source_security_group_id": "sg-030090674f208edcf",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo_eks.module.eks.aws_security_group.cluster",
            "module.tokyo_eks.module.eks.aws_security_group.node",
            "module.tokyo_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3874917384",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072b8e8e2545d6b82",
            "security_group_rule_id": "sgr-0a99a900b47ed43c0",
            "self": false,
            "source_security_group_id": "sg-030090674f208edcf",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo_eks.module.eks.aws_security_group.cluster",
            "module.tokyo_eks.module.eks.aws_security_group.node",
            "module.tokyo_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2186788803",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072b8e8e2545d6b82",
            "security_group_rule_id": "sgr-00c6f8de5345ff354",
            "self": false,
            "source_security_group_id": "sg-030090674f208edcf",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo_eks.module.eks.aws_security_group.cluster",
            "module.tokyo_eks.module.eks.aws_security_group.node",
            "module.tokyo_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1243977293",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072b8e8e2545d6b82",
            "security_group_rule_id": "sgr-0de18794054cfb5dc",
            "self": false,
            "source_security_group_id": "sg-030090674f208edcf",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo_eks.module.eks.aws_security_group.cluster",
            "module.tokyo_eks.module.eks.aws_security_group.node",
            "module.tokyo_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-545562678",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072b8e8e2545d6b82",
            "security_group_rule_id": "sgr-01b0a53af60be5fb5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo_eks.module.eks.aws_security_group.cluster",
            "module.tokyo_eks.module.eks.aws_security_group.node",
            "module.tokyo_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-176638663",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072b8e8e2545d6b82",
            "security_group_rule_id": "sgr-05abe2a8c69283dcc",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo_eks.module.eks.aws_security_group.cluster",
            "module.tokyo_eks.module.eks.aws_security_group.node",
            "module.tokyo_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2933451048",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-072b8e8e2545d6b82",
            "security_group_rule_id": "sgr-07ec4c0392a6ef1fe",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo_eks.module.eks.aws_security_group.cluster",
            "module.tokyo_eks.module.eks.aws_security_group.node",
            "module.tokyo_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo_rds_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:501257812675:security-group/sg-0f4905ca7f8137d6e",
            "description": "tokyo-rds-security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4905ca7f8137d6e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tokyo-db-sg",
            "name_prefix": "",
            "owner_id": "501257812675",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tokyo-rds-sg"
            },
            "tags_all": {
              "Name": "tokyo-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-098db7373f97fedd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:501257812675:internet-gateway/igw-06963a0a74b393d25",
            "id": "igw-06963a0a74b393d25",
            "owner_id": "501257812675",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-098db7373f97fedd8"
          },
          "dependencies": [
            "module.tokyo_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:501257812675:route-table/rtb-0320d8c4606da34cb",
            "id": "rtb-0320d8c4606da34cb",
            "owner_id": "501257812675",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06963a0a74b393d25",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-098db7373f97fedd8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tokyo_vpc.aws_internet_gateway.gw",
            "module.tokyo_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f54b4342b0ab6898",
            "route_table_id": "rtb-0320d8c4606da34cb",
            "subnet_id": "subnet-0a84ca9fe219d277a"
          },
          "dependencies": [
            "module.tokyo_vpc.aws_internet_gateway.gw",
            "module.tokyo_vpc.aws_route_table.public",
            "module.tokyo_vpc.aws_subnet.public",
            "module.tokyo_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afad37286a7c49b1",
            "route_table_id": "rtb-0320d8c4606da34cb",
            "subnet_id": "subnet-047df45d4a78fd7f0"
          },
          "dependencies": [
            "module.tokyo_vpc.aws_internet_gateway.gw",
            "module.tokyo_vpc.aws_route_table.public",
            "module.tokyo_vpc.aws_subnet.public",
            "module.tokyo_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:501257812675:subnet/subnet-048a48c08497dec47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.2.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048a48c08497dec47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501257812675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-098db7373f97fedd8"
          },
          "dependencies": [
            "module.tokyo_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:501257812675:subnet/subnet-0b3d80ef7ca343f32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.2.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3d80ef7ca343f32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501257812675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-2"
            },
            "tags_all": {
              "Name": "private-subnet-2"
            },
            "vpc_id": "vpc-098db7373f97fedd8"
          },
          "dependencies": [
            "module.tokyo_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:501257812675:subnet/subnet-0a84ca9fe219d277a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a84ca9fe219d277a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "501257812675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-098db7373f97fedd8"
          },
          "dependencies": [
            "module.tokyo_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:501257812675:subnet/subnet-047df45d4a78fd7f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047df45d4a78fd7f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "501257812675",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-098db7373f97fedd8"
          },
          "dependencies": [
            "module.tokyo_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.tokyo_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:501257812675:vpc/vpc-098db7373f97fedd8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0814b6822774c9469",
            "default_route_table_id": "rtb-0a4e1d9e894c9d491",
            "default_security_group_id": "sg-004529289335b35e3",
            "dhcp_options_id": "dopt-0274a6da875c5f6ad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-098db7373f97fedd8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a4e1d9e894c9d491",
            "owner_id": "501257812675",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}